[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/user interface/items/medalFirst.png" type="Texture" id=1]
[ext_resource path="res://assets/user interface/backgrounds/Leaderboard.png" type="Texture" id=2]
[ext_resource path="res://assets/user interface/themes/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://src/user interface/ChangeSceneButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/user interface/bubblebuttons/png/Button_32.png" type="Texture" id=5]
[ext_resource path="res://src/screens/LeaderboardScreen.gd" type="Script" id=6]
[ext_resource path="res://assets/user interface/items/medalSecond.png" type="Texture" id=7]
[ext_resource path="res://assets/user interface/items/medalThird.png" type="Texture" id=8]
[ext_resource path="res://assets/user interface/themes/AlloyInk-lgdWw.otf" type="DynamicFontData" id=9]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 50.0
content_margin_right = 30.0
content_margin_top = 30.0
content_margin_bottom = 20.0
bg_color = Color( 0.219608, 0.843137, 0.823529, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.188235, 0.713726, 0.698039, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxLine" id=6]
color = Color( 0.188235, 0.713726, 0.698039, 1 )
thickness = 10
vertical = true

[sub_resource type="StyleBoxLine" id=7]
color = Color( 0.188235, 0.713726, 0.698039, 1 )
thickness = 10
vertical = true

[node name="LeaderboardScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="BackButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.35
anchor_top = 1.0
anchor_right = 0.35
anchor_bottom = 1.0
margin_left = -292.0
margin_top = -210.0
margin_right = -142.0
margin_bottom = -60.0
rect_pivot_offset = Vector2( 75, 75 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
icon_align = 1
__meta__ = {
"_edit_use_anchors_": true
}
next_scene_path = "res://src/screens/MenuScreen.tscn"

[node name="GameModeButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.732407
anchor_top = 0.909896
anchor_right = 0.732407
anchor_bottom = 0.909896
margin_left = -191.0
margin_top = -37.0
margin_right = 159.0
margin_bottom = 113.0
text = "MODALITA' 1"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LeaderboardScroll1" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -416.0
margin_top = -207.0
margin_right = 416.0
margin_bottom = -107.0
custom_styles/bg = SubResource( 5 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LeaderboardContainer" type="HBoxContainer" parent="LeaderboardScroll1"]
light_mask = 2
margin_left = 50.0
margin_top = 30.0
margin_right = 802.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/separation = 5

[node name="LeaderboardPositionTextContainer" type="VBoxContainer" parent="LeaderboardScroll1/LeaderboardContainer"]
margin_right = 109.0
margin_bottom = 50.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 10

[node name="PositionText" type="Label" parent="LeaderboardScroll1/LeaderboardContainer/LeaderboardPositionTextContainer"]
margin_right = 109.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.188235, 0.713726, 0.698039, 1 )
custom_fonts/font = SubResource( 8 )
text = "POS."
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LeaderboardNameTextContainer" type="VBoxContainer" parent="LeaderboardScroll1/LeaderboardContainer"]
margin_left = 114.0
margin_right = 430.0
margin_bottom = 50.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
custom_constants/separation = 27

[node name="NameText" type="Label" parent="LeaderboardScroll1/LeaderboardContainer/LeaderboardNameTextContainer"]
margin_right = 316.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.188235, 0.713726, 0.698039, 1 )
custom_fonts/font = SubResource( 8 )
text = "NOME"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LeaderboardScoreTextContainer" type="VBoxContainer" parent="LeaderboardScroll1/LeaderboardContainer"]
margin_left = 435.0
margin_right = 752.0
margin_bottom = 50.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
custom_constants/separation = 27

[node name="GameScore" type="Label" parent="LeaderboardScroll1/LeaderboardContainer/LeaderboardScoreTextContainer"]
margin_right = 317.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.188235, 0.713726, 0.698039, 1 )
custom_fonts/font = SubResource( 8 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LeaderboardScroll2" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.657812
anchor_right = 0.5
anchor_bottom = 0.657812
margin_left = -400.0
margin_top = -400.0
margin_right = 400.0
margin_bottom = 400.0
custom_styles/bg = SubResource( 5 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LeaderboardContainer" type="HBoxContainer" parent="LeaderboardScroll2"]
light_mask = 2
margin_left = 50.0
margin_top = 30.0
margin_right = 770.0
margin_bottom = 780.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/separation = 30

[node name="LeaderboardMedalContainer" type="VBoxContainer" parent="LeaderboardScroll2/LeaderboardContainer"]
margin_right = 84.0
margin_bottom = 750.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 10

[node name="MedalFirst" type="TextureRect" parent="LeaderboardScroll2/LeaderboardContainer/LeaderboardMedalContainer"]
margin_right = 84.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="MedalSecond" type="TextureRect" parent="LeaderboardScroll2/LeaderboardContainer/LeaderboardMedalContainer"]
margin_top = 74.0
margin_right = 84.0
margin_bottom = 138.0
texture = ExtResource( 7 )

[node name="MedalThird" type="TextureRect" parent="LeaderboardScroll2/LeaderboardContainer/LeaderboardMedalContainer"]
margin_top = 148.0
margin_right = 84.0
margin_bottom = 212.0
texture = ExtResource( 8 )

[node name="HSeparator" type="HSeparator" parent="LeaderboardScroll2/LeaderboardContainer/LeaderboardMedalContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 222.0
margin_right = 84.0
margin_bottom = 226.0

[node name="LeaderboardPositionContainer" type="VBoxContainer" parent="LeaderboardScroll2/LeaderboardContainer/LeaderboardMedalContainer"]
margin_top = 236.0
margin_right = 84.0
margin_bottom = 236.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 27

[node name="VSeparator" type="VSeparator" parent="LeaderboardScroll2/LeaderboardContainer"]
margin_left = 114.0
margin_right = 118.0
margin_bottom = 750.0
custom_styles/separator = SubResource( 6 )

[node name="LeaderboardNameContainer" type="VBoxContainer" parent="LeaderboardScroll2/LeaderboardContainer"]
margin_left = 148.0
margin_right = 402.0
margin_bottom = 750.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
custom_constants/separation = 27

[node name="VSeparator2" type="VSeparator" parent="LeaderboardScroll2/LeaderboardContainer"]
margin_left = 432.0
margin_right = 436.0
margin_bottom = 750.0
custom_styles/separator = SubResource( 7 )

[node name="LeaderboardScoreContainer" type="VBoxContainer" parent="LeaderboardScroll2/LeaderboardContainer"]
margin_left = 466.0
margin_right = 720.0
margin_bottom = 750.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
custom_constants/separation = 27

[node name="LeaderboardScroll3" type="ScrollContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.657812
anchor_right = 0.5
anchor_bottom = 0.657812
margin_left = -400.0
margin_top = -400.0
margin_right = 400.0
margin_bottom = 400.0
custom_styles/bg = SubResource( 5 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LeaderboardContainer" type="HBoxContainer" parent="LeaderboardScroll3"]
light_mask = 2
margin_left = 50.0
margin_top = 30.0
margin_right = 770.0
margin_bottom = 780.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/separation = 30

[node name="LeaderboardMedalContainer" type="VBoxContainer" parent="LeaderboardScroll3/LeaderboardContainer"]
margin_right = 84.0
margin_bottom = 750.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 10

[node name="MedalFirst" type="TextureRect" parent="LeaderboardScroll3/LeaderboardContainer/LeaderboardMedalContainer"]
margin_right = 84.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="MedalSecond" type="TextureRect" parent="LeaderboardScroll3/LeaderboardContainer/LeaderboardMedalContainer"]
margin_top = 74.0
margin_right = 84.0
margin_bottom = 138.0
texture = ExtResource( 7 )

[node name="MedalThird" type="TextureRect" parent="LeaderboardScroll3/LeaderboardContainer/LeaderboardMedalContainer"]
margin_top = 148.0
margin_right = 84.0
margin_bottom = 212.0
texture = ExtResource( 8 )

[node name="HSeparator" type="HSeparator" parent="LeaderboardScroll3/LeaderboardContainer/LeaderboardMedalContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 222.0
margin_right = 84.0
margin_bottom = 226.0

[node name="LeaderboardPositionContainer" type="VBoxContainer" parent="LeaderboardScroll3/LeaderboardContainer/LeaderboardMedalContainer"]
margin_top = 236.0
margin_right = 84.0
margin_bottom = 236.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 27

[node name="VSeparator" type="VSeparator" parent="LeaderboardScroll3/LeaderboardContainer"]
margin_left = 114.0
margin_right = 118.0
margin_bottom = 750.0
custom_styles/separator = SubResource( 6 )

[node name="LeaderboardNameContainer" type="VBoxContainer" parent="LeaderboardScroll3/LeaderboardContainer"]
margin_left = 148.0
margin_right = 402.0
margin_bottom = 750.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
custom_constants/separation = 27

[node name="VSeparator2" type="VSeparator" parent="LeaderboardScroll3/LeaderboardContainer"]
margin_left = 432.0
margin_right = 436.0
margin_bottom = 750.0
custom_styles/separator = SubResource( 7 )

[node name="LeaderboardScoreContainer" type="VBoxContainer" parent="LeaderboardScroll3/LeaderboardContainer"]
margin_left = 466.0
margin_right = 720.0
margin_bottom = 750.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
custom_constants/separation = 27

[connection signal="pressed" from="GameModeButton" to="." method="_on_GameModeButton_pressed"]
